[gd_scene load_steps=6 format=3 uid="uid://xha8t3vt4ti"]

[ext_resource type="Texture2D" uid="uid://ch7aep2wti7ix" path="res://assets/Board-15-14.png" id="1_3o2as"]
[ext_resource type="PackedScene" uid="uid://du7mrfs226jge" path="res://scenes/ending.tscn" id="1_isy1k"]
[ext_resource type="PackedScene" uid="uid://c148x70quvadq" path="res://scenes/hud.tscn" id="2_2evpn"]
[ext_resource type="PackedScene" uid="uid://di8d52yfmhcli" path="res://scenes/level.tscn" id="3_jm3ei"]
[ext_resource type="Script" path="res://scripts/SFX.gd" id="4_qxgm7"]

[node name="Main" type="Node"]

[node name="HUD" parent="." instance=ExtResource("2_2evpn")]

[node name="CanvasLayer" parent="." instance=ExtResource("1_isy1k")]

[node name="board" type="Sprite2D" parent="."]
texture = ExtResource("1_3o2as")
offset = Vector2(375, 350)

[node name="TileMap" parent="." instance=ExtResource("3_jm3ei")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"sfx"
script = ExtResource("4_qxgm7")

[connection signal="pressed" from="CanvasLayer" to="AudioStreamPlayer" method="_on_pressed"]
[connection signal="died" from="TileMap" to="CanvasLayer" method="_on_died"]
[connection signal="died" from="TileMap" to="AudioStreamPlayer" method="_on_died"]
[connection signal="flagged" from="TileMap" to="AudioStreamPlayer" method="_on_flagged"]
[connection signal="opened" from="TileMap" to="AudioStreamPlayer" method="_on_opened"]
[connection signal="won" from="TileMap" to="CanvasLayer" method="_on_won"]
[connection signal="won" from="TileMap" to="AudioStreamPlayer" method="_on_won"]
